<resources>
    <string name="app_name">MovieCatalog</string>
    <string name="cliche_plot_string">Plot: A cliche family moves into a cliche hunted cliche house and some cliches happen and they will die in a very cliche way…Unless…(cliche clickbait)</string>
    <string name="sort_by">Sort by..</string>
    <string name="settings">Settings</string>
    <string name="key_sort_by">key_sort_by</string>
    <string name="settings_label">Settings</string>
    <string name="no_internet_connection_message">No internet connection</string>
    <string name="the_movie_poster">The movie poster</string>
    <string name="poster_error">Failed to load movie poster.</string>
    <string name="key_sort_order">key_sort_order</string>
    <string name="pref_sort_category_default">movie/popular</string>
    <string name="pref_sort_order_default">.desc</string>
    <string name="pref_sort_order_title">Sort order</string>
    <string name="poster_content_description">The movie poster</string>
    <string name="button_add_to_watch_list">Add to watch list</string>
    <string name="add_to_favorites_description">Add to favorites</string>
    <string name="add_to_watch_list_description">Add to watch list</string>
    <string name="button_text_reviews">Reviews</string>
    <string name="button_text_watch_trailer">Watch trailers</string>
    <string name="movie_added_to_favorites">Movie added to favorites</string>
    <string name="movie_removed_from_favorites">Movie has been removed from favorites</string>
    <string name="delete_favorites_confirmation_message">You are about to delete the favorites list. Do you wish to proceed?</string>
    <string name="delete_favorites_confirmation_title">Delete favorites</string>
    <string name="favorites_cleared_toast">Favorites list has been cleared.</string>
    <string name="confirmation_delete_watchlist_message">You are about to delete the watchlist. Proceed?</string>
    <string name="confirmation_delete_watchlist_title">Delete watchlist</string>
    <string name="watchlist_empty_state_text">The watchlist is empty. To add movies, press the Add to Watchlist button from the movie detail screen.</string>
    <string name="add_to_favorites_empty_state">The favorites list is empty. To add movies to favorites, click the Add to Favorites (Star) button in the movie detail screen.</string>
    <string name="favorites_label">Favorites</string>
    <string name="movie_details_label">Movie Details</string>
    <string name="watchlist_label">Watchlist</string>
    <string name="reviews_label">Reviews</string>
    <string name="trailer">Trailer</string>
    <string name="trailers">Trailers</string>
    <string name="delete_favorites">Delete favorites</string>
    <string name="review_empty_state_text">There are no reviews for this movie.</string>
    <string name="watchlist_toast_confirmation">Movie added to watchlist</string>
    <string name="trailers_empty_state">There are no trailers for this movie</string>
</resources>
